# math_engine

./: CMakeLists.txt  LICENSE  README.md
include/: linear_algebra.hpp  number_theory.hpp  probability.hpp
src/: linear_algebra.cpp  number_theory.cpp  probability.cpp
tests/: CMakeLists.txt  linear_algebra_tests.cpp  number_theory_tests.cpp  probability_tests.cpp
